## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = polarhrm \
	test

test_SOURCES = \
	file_operations.cpp   \
	file_operations.h   \
	Driver/driver.h   \
	Driver/driver.cpp   \
	Driver/irda_driver.h   \
	Driver/irda_driver.cpp   \
	polarhrm_config.h   \
	S625X_watch/S625X.cpp   \
	S625X_watch/S625X.h   \
	S625X_watch/S625X_comm.cpp   \
	S625X_watch/S625X_comm.h   \
	S625X_watch/S625X_commands.h   \
	S625X_watch/S625X_parse_overview.cpp   \
	S625X_watch/S625X_parse_session.cpp   \
	S625X_watch/S625X_parse.h   \
	S625X_watch/S625X_parse.cpp   \
	RS800CX_watch/RS800CX.cpp   \
	RS800CX_watch/RS800CX.h   \
	RS800CX_watch/RS800CX_comm.cpp   \
	RS800CX_watch/RS800CX_comm.h   \
	RS800CX_watch/RS800CX_commands.h   \
	RS800CX_watch/RS800CX_parse_overview.cpp   \
	RS800CX_watch/RS800CX_parse_session.cpp   \
	RS800CX_watch/RS800CX_parse.h   \
	RS800CX_watch/RS800CX_parse.cpp   \
	Watch/Overview.cpp   \
	Watch/Overview.h   \
	Watch/RawSessionFile.cpp   \
	Watch/RawSessionFile.h   \
	Watch/RawSessions.cpp   \
	Watch/RawSessions.h   \
	Watch/wDate.cpp   \
	Watch/wDate.h   \
	Watch/HrmFile.cpp   \
	Watch/HrmFile.h   \
	Watch/Lap.cpp   \
	Watch/Lap.h   \
	Watch/Limit.cpp   \
	Watch/Limit.h   \
	Watch/Sample.cpp   \
	Watch/Sample.h   \
	Watch/Session.cpp   \
	Watch/Session.h   \
	Watch/sportZone.cpp   \
	Watch/sportZone.h   \
	Watch/wTime.cpp   \
	Watch/wTime.h   \
	test.cpp   \
	Watch/Watch.h   \
	Watch/Watch.cpp   \
	util_functions.cpp   \
	util_functions.h   \
	Datanode.cpp   \
	Datanode.h

polarhrm_SOURCES = \
	polarhrm.h   \
	polarhrm.cpp   \
	file_operations.cpp   \
	file_operations.h   \
	Driver/driver.h   \
	Driver/driver.cpp   \
	Driver/irda_driver.h   \
	Driver/irda_driver.cpp   \
	polarhrm_config.h   \
	S625X_watch/S625X.cpp   \
	S625X_watch/S625X.h   \
	S625X_watch/S625X_comm.cpp   \
	S625X_watch/S625X_comm.h   \
	S625X_watch/S625X_commands.h   \
	S625X_watch/S625X_parse_overview.cpp   \
	S625X_watch/S625X_parse_session.cpp   \
	S625X_watch/S625X_parse.h   \
	S625X_watch/S625X_parse.cpp   \
	RS800CX_watch/RS800CX.cpp   \
	RS800CX_watch/RS800CX.h   \
	RS800CX_watch/RS800CX_comm.cpp   \
	RS800CX_watch/RS800CX_comm.h   \
	RS800CX_watch/RS800CX_commands.h   \
	RS800CX_watch/RS800CX_parse_overview.cpp   \
	RS800CX_watch/RS800CX_parse_session.cpp   \
	RS800CX_watch/RS800CX_parse.h   \
	RS800CX_watch/RS800CX_parse.cpp   \
	Watch/Overview.cpp   \
	Watch/Overview.h   \
	Watch/RawSessionFile.cpp   \
	Watch/RawSessionFile.h   \
	Watch/RawSessions.cpp   \
	Watch/RawSessions.h   \
	Watch/wDate.cpp   \
	Watch/wDate.h   \
	Watch/HrmFile.cpp   \
	Watch/HrmFile.h   \
	Watch/Lap.cpp   \
	Watch/Lap.h   \
	Watch/Limit.cpp   \
	Watch/Limit.h   \
	Watch/Sample.cpp   \
	Watch/Sample.h   \
	Watch/Session.cpp   \
	Watch/Session.h   \
	Watch/sportZone.cpp   \
	Watch/sportZone.h   \
	Watch/wTime.cpp   \
	Watch/wTime.h   \
	Watch/Watch.h   \
	Watch/Watch.cpp   \
	util_functions.cpp   \
	util_functions.h   \
	Datanode.cpp   \
	Datanode.h


polarhrm_LDFLAGS = 

polarhrm_LDADD = 


SUBDIRS = \
	RS400_watch
